--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,10 @@ repositories {
 }
 
 dependencies {
-   // implementation 'junit:junit:4.12'
+    implementation 'junit:junit:4.12'
+    implementation 'junit:junit:4.12'
+
+    // implementation 'junit:junit:4.12'
 
     // https://mvnrepository.com/artifact/junit/junit
     testImplementation group: 'junit', name: 'junit', version: '4.13.1'
